[package]
name = "rashcard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.24.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
rusqlite = { version = "0.30.0", features = ["bundled"] }
tui-textarea = "0.4.0"
